# vellum

./: .gitignore  .wrproject  Cargo.toml  LICENSE  README.md  tools
assets/: init.bash  init.zsh
dev/: Dockerfile  build
package/: .gitignore  .wrproject  PKGBUILD  build  build-deb  lintian  template.control  vellum.install  vellum.spec
package/images/deb/: Dockerfile
src/: api.rs  assets.rs  client.rs  complete.rs  config.rs  error.rs  history.rs  init.rs  main.rs  process.rs  server.rs
src/api/: mod.rs
src/client/: edit.rs  filter.rs  get.rs  history.rs  import.rs  mod.rs  move.rs  save.rs  session.rs
src/config/: mod.rs
src/error/: mod.rs
src/history/: mod.rs  store.rs
src/server/: mod.rs
src/sync/: dummy.rs  git.rs  local.rs  mod.rs
