[package]
name = "vellum"
version = "0.1.0"
edition = "2024"
description = "Records the history of commands run"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "unicode", "wrap_help"] }
clap-cargo = "0.15.2"
env_logger = "0.11.8"
fork = "0.2.0"
git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"] }
hostname = "0.4.1"
include_dir = "0.7.4"
log = { version = "0.4.27", features = ["std", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
xdg = { version = "2.5.2", features = ["serde"] }
