[package]
name = "vellum"
version = "0.3.0"
edition = "2024"
description = "Records the history of commands run"

[dependencies]
aws-lc-rs = "1.13.0"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["cargo", "derive", "unicode", "wrap_help"] }
clap-cargo = "0.15.2"
env_logger = "0.11.8"
fd-lock = "4.0.4"
fork = "0.2.0"
git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"] }
hostname = "0.4.1"
humantime = "2.2.0"
humantime-serde = "1.1.1"
include_dir = "0.7.4"
itertools = "0.14.0"
log = { version = "0.4.27", features = ["std", "serde"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.17"
sysinfo = { version = "0.34.2", default-features = false, features = ["system"] }
tempfile = "3.19.1"
ticker = "0.1.1"
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["serde", "v7"] }
which = "7.0.3"
xdg = { version = "2.5.2", features = ["serde"] }
